<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

<android.support.design.widget.AppBarLayout
    android:id="@+id/main.appbar"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:theme="@style/AppBarLayout"
    android:fitsSystemWindows="true"
    >
    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/main.collapsing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        android:fitsSystemWindows="true"
        app:contentScrim="?attr/colorPrimary"
        app:expandedTitleMarginStart="48dp"
        app:expandedTitleMarginEnd="60dp"
        >
        <ImageView
            android:id="@+id/main.backdrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:fitsSystemWindows="true"
            android:src="@drawable/collapse_stock"
            app:layout_collapseMode="parallax"
            />
        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            >
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.CollapsingToolbarLayout>
</android.support.design.widget.AppBarLayout>

<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="8dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardBackgroundColor="@color/material_blue_500"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:id="@+id/card_view"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="20dp">


            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/chart_description"
                />


        <android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/detail_additional_pane"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            app:columnCount="2"
            android:paddingBottom="16dp"
            android:paddingEnd="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingStart="3dp"
            android:paddingTop="30dp">

            <TextView
                android:id="@+id/symbol_label"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/symbole_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/symbol_text"
                android:gravity="center_vertical"
                android:text="@string/test_string"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/name_label"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/name_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/name_text"
                android:gravity="center_vertical"
                android:text="@string/test_string"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/currency_label"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/currency_label"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>


            <TextView
                android:id="@+id/currency_text"
                android:gravity="center_vertical"
                android:text="@string/test_string"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"/>


            <TextView
                android:id="@+id/stockExchange_label"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:text="@string/exchange_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/stockExchange_text"
                android:gravity="center_vertical"
                android:text="@string/test_string"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"/>
        </android.support.v7.widget.GridLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
